Logout users from the central provider, when enabled

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -67,11 +67,18 @@ whitelabel {
 play.http.secret.key = "changeme"
 play.http.secret.key = ${?SECRET_KEY}
 
-# Configure which IDP to use for applicant and admin authentication.
-auth.applicant_idp = "idcs"
-auth.applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
-auth.admin_idp = "adfs"
-auth.admin_idp = ${?CIVIFORM_ADMIN_IDP}
+auth {
+  # Configure which IDP to use for applicant and admin authentication.
+  applicant_idp = "idcs"
+  applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
+  admin_idp = "adfs"
+  admin_idp = ${?CIVIFORM_ADMIN_IDP}
+  oidc_provider_logout = false
+  oidc_provider_logout = ${?OIDC_PROVIDER_LOGOUT}
+  oidc_post_logout_param = "post_logout_redirect_uri"
+  oidc_post_logout_param = ${?OIDC_POST_LOGOUT_REDIRECT_PARAM}
+  oidc_logout_client_id_param = ${?OIDC_LOGOUT_CLIENT_PARAM}
+}
 
 ## IDCS integration
 # IDCS secrets must be provided by environment variables - we cannot check them in.
