--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -19,6 +19,10 @@ play.filters {
     cookie.secure = false
   }
   disabled += filters.HSTSFilter
+  hosts {
+    # Also allow the host set by the BASE_URL env variable in dev mode.
+    allowed += ${?BASE_URL}
+  }
 }
 
 # Feature flags.
