Move feature_flag_overrides_enabled override to dev/test configs.

--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -21,4 +21,7 @@ play.filters {
   disabled += filters.HSTSFilter
 }
 
+# Feature flags.
 application_status_tracking_enabled = true
+feature_flag_overrides_enabled = true
+feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
