--- a/server/conf/application.test.conf
+++ b/server/conf/application.test.conf
@@ -16,6 +16,10 @@ play.evolutions.db.default.enabled = "true"
 azure.blob.container = "super cool blob container name"
 azure.blob.account = "my awesome azure account name"
 
-application_status_tracking_enabled = true
-
 auth.applicant_idp = "disabled"
+
+# Feature flags.
+application_status_tracking_enabled = true
+feature_flag_overrides_enabled = true
+feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+
