Language translation updates

--- a/server/conf/messages.am
+++ b/server/conf/messages.am
@@ -80,3 +80,31 @@ validation.idTooShort=ቢያንስ {0} ቁምፊዎች መያዝ አለበት።
 validation.idTooLong=ቢበዛ {0} ቁምፊዎች መያዝ አለበት።
 validation.numberRequired=ቁጥሮችን ብቻ መያዝ አለበት።
 adminValidation.multiOptionEmpty=ብዙ አማራጭ ያላቸው ጥያቄዎች ባዶ አማራጮች ሊኖራቸው አይችልም።
+ariaLabel.edit=የአርትኦት ሥራ/ እርማት{0}
+button.applySr=ለ ያመልክቱ{0}
+button.createAccount=መታወቂያ ይፍጠሩ ወይም ይግቡ
+button.edit=የአርትኦት ሥራ/ እርማት
+button.guestLogin=እንደ እንግዳ ቀጥሉ
+button.login=ግባ
+button.previousScreen=ቀዳሚ
+button.untranslatedSubmit=አስገባ (አስረክብ)
+content.adminLoginPrompt=ሌላ ነገር እየፈለጉ ነው?
+content.alternativeLoginPrompt=የመለያ ሂሳብ የለኝም?
+content.applicantInformation=Applicant Information
+content.loginPrompt=እባክዎ በሲያትል ከተማ የመለያ ሂሳብዎ ይግቡ
+content.or=ወይም
+content.submittedDate=submitted {0}
+dialog.confirmDelete= እርግጠኛ ነዎት ይህንን ማስወገድ ይፈልጋሉ? ይህ ለውጥ "የሚቀጥለው" ("Next") የሚለውን ጠቅ ካደረጉ በኋላ ይቀመጣል እና ከዚህ ጋር የተያያዙ ሁሉም ውሂቦችguest
+header.userName=የገባሁት እንደ {0}
+input.fileAlreadyUploaded= File uploaded: {0}
+label.languageSr=ቋንቋ ይምረጡ
+label.selectLanguage=ቋንቋ ይምረጡ
+link.adminLogin=Admin Login
+link.programDetailsSr=የፕሮግራም ዝርዝሮች ለ {0}
+placeholder.noDropdownSelection=አንድ አማራጭ ይምረጡ:
+title.activeProgramsUpdated=Not started
+title.inProgressProgramsUpdated=In progress
+title.submittedPrograms=Submitted
+validation.dateMisformatted=Please enter a date in the format YYYY/MM/DD.
+validation.invalidInput=Please enter valid input.
+validation.numberNonInteger=Number must be a positive whole number and can only contain numeric characters 0-9.
