--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,16 +14,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "require-jsdoc": "off",
-    "@typescript-eslint/no-explicit-any": "off",
     "valid-jsdoc": "warn",
-    "@typescript-eslint/no-unused-vars": "off", // overlaps with standard eslint no-unused-vars.
-    "no-unused-vars": [
-      "warn", // or error
-      {
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
-      }
-    ]
+    "@typescript-eslint/no-unused-vars": "off" // overlaps with standard eslint no-unused-vars.
   }
 }
