--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,9 @@ services:
       - IDCS_DISCOVERY_URI=http://dev-oidc:3390/.well-known/openid-configuration
       - ADFS_CLIENT_ID
       - ADFS_SECRET
+      - APPLICANT_OIDC_PROVIDER_LOGOUT
+      - APPLICANT_OIDC_POST_LOGOUT_REDIRECT_PARAM
+      - APPLICANT_OIDC_LOGOUT_CLIENT_PARAM
       - APPLICANT_OIDC_PROVIDER_NAME
       - APPLICANT_OIDC_CLIENT_ID
       - APPLICANT_OIDC_CLIENT_SECRET
