--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -73,11 +73,12 @@ auth {
   applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
   admin_idp = "adfs"
   admin_idp = ${?CIVIFORM_ADMIN_IDP}
+
+  # Logout options when using OIDC (idcs, or applicant_generic_oidc)
   oidc_provider_logout = false
-  oidc_provider_logout = ${?OIDC_PROVIDER_LOGOUT}
-  oidc_post_logout_param = "post_logout_redirect_uri"
-  oidc_post_logout_param = ${?OIDC_POST_LOGOUT_REDIRECT_PARAM}
-  oidc_logout_client_id_param = ${?OIDC_LOGOUT_CLIENT_PARAM}
+  oidc_provider_logout = ${?APPLICANT_OIDC_PROVIDER_LOGOUT}
+  oidc_post_logout_param = ${?APPLICANT_OIDC_POST_LOGOUT_REDIRECT_PARAM}
+  oidc_logout_client_id_param = ${?APPLICANT_OIDC_LOGOUT_CLIENT_PARAM}
 }
 
 ## IDCS integration
