Cleanup browsertest civiform-dev volumes, and add a warmup loop

--- a/browser-test/browser-test-compose.dev.yml
+++ b/browser-test/browser-test-compose.dev.yml
@@ -5,22 +5,9 @@ services:
   civiform:
     volumes:
       - ./server:/usr/src/server
-      - target:/usr/src/server/target
-      - node_modules-data:/usr/src/server/node_modules
-      - project-data:/usr/src/server/project/project
-      - project-target-data:/usr/src/server/project/target
     stdin_open: true # docker run -i
     tty: true # docker run -t
     ports:
-      - 9457:9457
-    command: -jvm-debug "*:9457" ~run -Dconfig.file=conf/application.dev-browser-tests.conf
-
-volumes:
-  node_modules-data:
-    driver: local
-  project-data:
-    driver: local
-  project-target-data:
-    driver: local
-  target:
-    driver: local
+      - 9100:9000
+      - 9457:8457
+    command: -jvm-debug "*:8457" ~run -Dconfig.file=conf/application.dev.conf
