Instrument server for Prometheus metrics

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -340,6 +340,14 @@ pac4j.security.rules = [
   }
 ]
 
+# If enabled, allows Prometheus server metrics to be retrieved via the "/metrics" URL path.
+# If "/metrics" disabled, returns a 404.
+server_metrics.enabled = false
+server_metrics.enabled = ${?SERVER_METRICS_ENABLED}
+# Configuration for monitoring library https://github.com/Jyllands-Posten/play-prometheus-filters
+# The Prometheus Hotspot library provides some default collectors for garbage collection, memory pool, etc
+play-prometheus-filters.register-default-hotspot-collectors = true
+
 ## Filter Configuration
 # https://www.playframework.com/documentation/latest/Filters
 # ~~~~~
@@ -347,6 +355,7 @@ pac4j.security.rules = [
 # to give Play greater security.
 #
 play.filters {
+  enabled += com.github.stijndehaes.playprometheusfilters.filters.StatusAndRouteLatencyAndCounterFilter
   enabled += filters.DisableCachingFilter
   enabled += filters.HSTSFilter
   enabled += filters.LoggingFilter
@@ -372,7 +381,7 @@ play.filters {
   # on the security logic setting ApiKey ID as the profile ID on the request object.
   enabled += filters.ApiKeyUsageFilter
 
-## CORS filter configuration
+  ## CORS filter configuration
   # https://www.playframework.com/documentation/latest/CorsFilter
   # ~~~~~
   # CORS is a protocol that allows web applications to make requests from the browser
