--- a/server/conf/messages.am
+++ b/server/conf/messages.am
@@ -5,78 +5,344 @@
 # To type an apostrophe in a message, please type two. Example: can't -> can''t
 # https://www.playframework.com/documentation/2.8.x/JavaI18N#Notes-on-apostrophes
 # ------------------------------------------------------------------------------- #
-button.apply=ያመልክቱ
-button.continue=ቀጥል
-button.deleteFile=ሰርዝ
-button.keepFile=ቀጥል
-button.logout=Logout
-button.nextScreen=ቀጥሎ
-button.review=ግምገማ
-button.skipFileUpload=ዝለል
-button.submit=አስገባ (አስረክብ)
-button.upload=ስቀል
+
+# The text on the button an applicant clicks to log out of their session.
+button.logout=ውጣ
+
+# NO TRANSLATION NEEDED - this appears before applicants select their preferred language, so we always use the default.
+label.selectLanguage=Please select your preferred language.
+
+# NO TRANSLATION NEEDED - this appears before applicants select their preferred language, so we always use the default.
+content.applicantInformation=Applicant Information
+
+# NO TRANSLATION NEEDED - this appears before applicants select their preferred language, so we always use the default.
+button.untranslatedSubmit=Submit
+
+# Message displayed before the support email address in the page footer for applicants.
 footer.supportLinkDescription=ለቴክኒካዊ ድጋፍ፣ ያግኙን
-toast.localeNotSupported=እናዝናለን፣ ይህ ፕሮግራም ሙሉ በሙሉ በመረጡት ቋንቋ አልተተረጎመም።
-toast.programCompleted=ማመልከቻው አስቀድሞ ተጠናቅቋል።
-toast.applicationSaved=Successfully saved application: ማመልከቻው በተሳካ ሁኔታ ተቀምጧል: የማመልከቻ መለያ/ መታወቂያ {0}
-title.applicationConfirmation=የማመልከቻ ማረጋገጫ
-title.createAnAccount=መታወቂያ ይፍጠሩ ወይም ይግቡ
-content.confirmed=ለ {0} ስላመለከቱ እናመሰግናለን።  ማመልከቻዎን ተቀብለናል፣ እና የማመልከቻዎ መታወቂያ {1} ነው። 
-content.pleaseCreateAccount=አሁን ወደ ከተማ መታወቂያ/ መለያ ከገቡ፣ መረጃዎ ይቀመጣል እና የወደፊት ማመልከቻዎችን ለማጠናቀቅ በማንኛውም ጊዜ መመለስ ይችላሉ። ከዚህ ቀደም መታወቂያ/ መለያ ከሌለዎት የመግቢያ ገጹ እንዲመዘገቡ ይፈቅድልዎታል። አስቀድመው ያስገቡትን ማንኛውንም ውሂብ አያጡም።
-link.allDone=ጨርሻለው
-link.applyToAnotherProgram=ለሌላ ፕሮግራም ያመልክቱ
-link.createAccountOrSignIn=መታወቂያ ይፍጠሩ ወይም ይግቡ
-link.begin=እዚህ ይጀምሩ
-link.edit=የአርትኦት ሥራ/ እርማት
-title.programPreview=የፕሮግራም ማመልከቻ ቅድመ እይታ
-title.programReview=የፕሮግራም ማመልከቻ ግምገማ
-title.programs=ፕሮግራሞች እና አገልግሎቶች
-title.inProgressPrograms=ቀጥል
-title.activePrograms=አዳዲስ ፕሮግራሞች
-title.programCard=ፕሮግራም {0} ከ {1} -- {2}
-link.programDetails=የፕሮግራም ዝርዝሮች
-link.externalLink=ውጫዊ ጣቢያ
-content.benefits=ጥቅማጥቅሞችን ያግኙ
-content.description1=መረጃን እንደገና በመጠቀም ሲቪፎርም (CiviForm) ለብዙ ጥቅማጥቅሞች በአንድ ጊዜ እንዲያመለክቱ ያስችልዎታል።
-content.description2=ከዚህ በታች ማመልከቻ በመምረጥ ይጀምሩ።
-label.street=አድራሻ መስመር 1
-placeholder.street=የአድራሻ ጎዳና
-label.addressLine2=ክፍል/ አፓርታማ ቁጥር
-placeholder.line2=አፓርትመንት፣ ክፍሎች፣ ክፍል፣ ህንፃ፣ ወለል፣ ወዘተ።
-label.city=ከተማ
-placeholder.city=ከተማ
-label.state=ግዛት (ስቴት)
-placeholder.state=ግዛት (ስቴት)
-label.zipcode=አካባቢያዊ መለያ ቁጥር (ዚፕ ኮድ)
-placeholder.zipcode=አካባቢያዊ መለያ ቁጥር (ዚፕ ኮድ)
-label.firstName=የመጀመሪያ ስም
-placeholder.firstName=የመጀመሪያ ስም
-label.middleName=የመሃል ስም
-placeholder.middleName=የመሃል ስም
-label.lastName=እባክዎን ያባት/ የመጨረሻ ስምዎን ያስገቡ
-placeholder.lastName=እባክዎን ያባት/ የመጨረሻ ስምዎን ያስገቡ
-placeholder.entityName=ቅጽል ስም ለ {0}
-button.addEntity=አክል/ ጨምር {0}
-button.removeEntity=አስወግድ {0}
+
+# Placeholder message when an applicant clicked the "Continue as Guest".
+# This should be consistent with button.guestLogin.
+# TODO(#1918): Translate.
+guest=እንግዳ (መግቢያ ወይም ማስገቢያ ከሌሎት)
+
+# Label read by screen readers for the language dropdown shown in the page header.
+label.languageSr=ቋንቋ ይምረጡ
+
+# Message with user's name to show who you are logged in as.
+header.userName=የገባሁት እንደ {0}
+
+# Error message to answer a required question
 validation.isRequired=ይህ ጥያቄ አስፈላጊ ነው።
-validation.duplicateEntityName=እባክዎን ለእያንዳንዱ መስመር ልዩ የሆነ እሴት ያስገቡ።
-validation.firstNameRequired=እባክዎን የመጀመሪያ ስምዎን ያስገቡ።
-validation.lastNameRequired=እባክዎን ያባት/ የመጨረሻ ስምዎን ያስገቡ
-validation.textTooShort=ቢያንስ {0} ቁምፊዎች መያዝ አለበት።
-validation.textTooLong=ቢበዛ {0} ቁምፊዎች መያዝ አለበት።
-validation.numberTooSmall=ቢያንስ {0} መሆን አለበት።
-validation.numberTooBig=ቢበዛ {0} መሆን አለበት።
-validation.tooFewSelections=እባክዎ ቢያንስ {0} ይምረጡ።
-validation.tooManySelections=እባክዎ ከ {0} ያነሱ ይምረጡ።
+
+# Validation error that is shown when the user input couldn't be converted for any reason.
+validation.invalidInput=እባክዎ ትክክለኛ ግብአት ያስገቡ
+
+#-------------------------------------------------------------#
+# LOGIN - contains text that for login page.                  #
+#-------------------------------------------------------------#
+
+# Prompt for applicant to log in, input is the full civic entity name.
+content.loginPrompt=እባክዎ በሲያትል ከተማ የመለያ ሂሳብዎ ይግቡ {0}
+
+# The text on the button an applicant clicks to log in to their session.
+button.login=ግባ
+
+# Prompt for applicant to create a new account or become a guest
+content.alternativeLoginPrompt=የመለያ ሂሳብ የለኝም?
+
+# The text between creating a new account, and becoming a guest
+content.or=ወይም
+
+# The text on the button for applicants to create a new account.
+button.createAccount=የመለያ ሂሳብ ይፍጠሩ
+
+# The text on the button for guests to log in to their session.
+button.guestLogin=እንደ እንግዳ ቀጥሉ
+
+# Prompt for whem applicant account login is disabled. Replaces loginPrompt and alternativeLoginPrompt.
+content.loginDisabledPrompt=Account login currently disabled
+
+# The words leading up to the admin login anchor
+content.adminLoginPrompt=ሌላ ነገር እየፈለጉ ነው?
+
+# The text on the anchor for admins to log in to their session.
+link.adminLogin=የአስተዳዳሪ/ የድህር ሰራተኛ መግቢያ
+
+#--------------------------------------------------------------------------#
+# PROGRAM FORM - contains text shown when filling out an application form. #
+#--------------------------------------------------------------------------#
+
+# The text displayed when a file has already been uploaded and the name is being displayed.
+input.fileAlreadyUploaded=ፋይል/ የሚያያዘው ሰንድ ተጭኗል: {0}
+
+# The text on the button an applicant clicks to delete an uploaded file.
+button.deleteFile=ሰርዝ
+
+# The text on the button an applicant clicks to skip uploading a new file while there is already an uploaded file.
+button.keepFile=ቀጥል
+
+# The button text for saving the current applicant-entered data and continuing to the next screen in the form.
+button.nextScreen=ቀጥሎ/ ወደሚቀጥለው
+
+# The button text for navigating to the previous screen in the form.
+button.previousScreen=ቀዳሚ
+
+# The text on the button an applicant clicks to jump to the review page.
+button.review=ግምገማ
+
+# The text on the button an applicant clicks to skip uploading a file.
+button.skipFileUpload=ዝለል
+
+# The text on the button an applicant clicks to upload a file and continue to the next screen.
+button.upload=ስቀል
+
+# A toast message that displays when a program is not fully localized to the applicant's preferred locale.
+toast.localeNotSupported=እናዝናለን፣ ይህ ፕሮግራም ሙሉ በሙሉ በመረጡት ቋንቋ አልተተረጎመም።
+
+# A link that logs out a guest user after they submit an application.
+link.allDone=ጨርሻለው
+
+# A link that appears next to the create account button that offers applicants the option to not create an account right now.
+link.applyToAnotherProgram=ለሌላ ፕሮግራም ያመልክቱ
+
+# A link that offers applicants the option to create an account.
+link.createAccountOrSignIn=መታወቂያ ይፍጠሩ ወይም ይግቡ
+
+#----------------------------------------------------------------------------#
+# APPLICANT HOME PAGE - contains text specific to the applicant's home page. #
+#----------------------------------------------------------------------------#
+
+# The text on the button an applicant clicks to apply to a specific program.
+button.apply=ያመልክቱ
+# The text read for screen readers.
+button.applySr=ለ ያመልክቱ {0}
+# The text on the button an applicant clicks to edit the application for a specific program.
+button.edit=የአርትኦት ሥራ/ እርማት
+
+# Text describing the date the application was last submitted.
+content.submittedDate=ገብቷል (ማመልከቻው) {0}
+
+# "Get benefits" floating text
+content.benefits=ጥቅማጥቅሞችን ያግኙ
+
+# Long form description of the CiviForm site shown to the applicant. Line 1.
+content.description1=መረጃን እንደገና በመጠቀም ሲቪፎርም (CiviForm) ለብዙ ጥቅማጥቅሞች በአንድ ጊዜ እንዲያመለክቱ ያስችልዎታል።
+
+# Long form description of the CiviForm site shown to the applicant. Line 2.
+content.description2=ከዚህ በታች ማመልከቻ በመምረጥ ይጀምሩ።
+
+# Link text to read more about a program.
+link.programDetails=የፕሮግራም ዝርዝሮች
+# The same text, read for screen readers.
+link.programDetailsSr=የፕሮግራም ዝርዝሮች ለ {0}
+
+# Link text to an external site to read more about a program.
+link.externalLink=ውጫዊ ጣቢያ
+
+# The title of the page for the list of programs.
+title.programs=ፕሮግራሞች እና አገልግሎቶች
+
+# Subtitle for the list of programs with draft applications
+# TODO(#2573): Remove this once translations are available for inProgressProgramsUpdated
+title.inProgressPrograms=ቀጥል
+
+# Subtitle for the list of programs with draft applications
+title.inProgressProgramsUpdated=በሂደት ላይ
+
+# Subtitle for the list of programs for which the applicant has no draft applications
+# TODO(#2573): Remove this once translations are available for activeProgramsUpdated
+title.activePrograms=አዳዲስ ፕሮግራሞች
+
+# Subtitle for the list of programs for which the applicant has no draft applications
+title.activeProgramsUpdated=አልተጀመረም (ማመልከቻው)
+
+# Subtitle for the list of programs for which the applicant has already submitted an application
+title.submittedPrograms=ገብቷል (ማመልከቻው)
+
+# Screen reader format string for program cards
+title.programCard=ፕሮግራም {0} ከ {1} -- {2}
+
+# A toast message that displays when an applicant submits an application.
+toast.applicationSaved=ማመልከቻው በተሳካ ሁኔታ ተቀምጧል: የማመልከቻ መለያ/ መታወቂያ {0}
+
+# A toast message that displays when an applicant tries to apply to a previously completed program.
+toast.programCompleted=ማመልከቻው አስቀድሞ ተጠናቅቋል።
+
+#------------------------------------------------------------------------#
+# APPLICANT APPLICATION REVIEW PAGE - text when reviewing an application #
+#------------------------------------------------------------------------#
+
+# Submit application button
+button.submit=አስገባ (አስረክብ)
+
+# Continue application button
+button.continue=ቀጥል
+
+# The text that appears next to the first unanswered question that the applicant can click on to continue filling out the program.
+link.begin=እዚህ ይጀምሩ
+
+# The text that appears next to an answered question that the applicant can click on to modify the response.
+link.edit=የአርትኦት ሥራ/ እርማት
+
+# An aria-label for screen readers that helps provide context for the associated edit link. The edit link is for a specific
+# question, so this might say "Edit What is your name?". The {0} variable is the question text.
+ariaLabel.edit=የአርትኦት ሥራ/ እርማት {0}
+
+# Program Preview Title
+title.programPreview=የፕሮግራም ማመልከቻ ቅድመ እይታ
+
+# Program Review Title
+title.programReview=የፕሮግራም ማመልከቻ ግምገማ
+
+#---------------------------------------------------------------------------------------------#
+# APPLICANT APPLICATION CONFIRMATION PAGE - text for a page confirming application submission #
+#---------------------------------------------------------------------------------------------#
+
+# Title on the page after the applicant has successfully submitted an application.
+title.applicationConfirmation=የማመልከቻ ማረጋገጫ
+
+# A confirmation message that shows after an applicant has submitted their application.
+content.confirmed=ለ {0} ስላመለከቱ እናመሰግናለን። ማመልከቻዎን ተቀብለናል፣ እና የማመልከቻዎ መታወቂያ {1} ነው። 
+
+# Title (not a main page title) on section prompting an applicant to create an account or sign in to save their data.
+title.createAnAccount=መታወቂያ ይፍጠሩ ወይም ይግቡ
+
+# A message urging users to create an account to save their data.
+content.pleaseCreateAccount=አሁን ወደ ከተማ መታወቂያ/ መለያ ከገቡ፣ መረጃዎ ይቀመጣል እና የወደፊት ማመልከቻዎችን ለማጠናቀቅ በማንኛውም ጊዜ መመለስ ይችላሉ። ከዚህ ቀደም መታወቂያ/ መለያ ከሌለዎት የመግቢያ ገጹ እንዲመዘገቡ ይፈቅድልዎታል። አስቀድመው ያስገቡትን ማንኛውንም ውሂብ አያጡም።
+
+
+
+
+#----------------------------------------------------------#
+# ADDRESS QUESTION - text when viewing an address question #
+#----------------------------------------------------------#
+
+# Address question labels - these are shown as the field label before an input box.
+label.addressLine2=ክፍል/ አፓርታማ ቁጥር
+label.city=ከተማ
+label.state=ግዛት (ስቴት)
+label.street=አድራሻ መስመር 1
+label.zipcode=አካባቢያዊ መለያ ቁጥር (ዚፕ ኮድ)
+
+# Question placeholders - these are shown in the text input boxes, before a user enters an answer.
+placeholder.city=ከተማ
+placeholder.line2=አፓርትመንት፣ ክፍሎች፣ ክፍል፣ ህንፃ፣ ወለል፣ ወዘተ።
+placeholder.state=ግዛት (ስቴት)
+placeholder.street=የአድራሻ ጎዳና
+placeholder.zipcode=አካባቢያዊ መለያ ቁጥር (ዚፕ ኮድ)
+
+# Validation errors that are shown when a user enters an invalid address.
 validation.streetRequired=እባክዎን የሚሰራ የመንገድ ስም እና ቁጥር ያስገቡ።
 validation.cityRequired=እባክዎን ከተማ ያስገቡ።
 validation.currencyMisformatted=ምንዛሬ ከሚከተሉት ቅርጸቶች አንዱ መሆን አለበት፡ 1000 1,000 1000.30 1,000.30
 validation.stateRequired=እባክዎን ግዛት (ስቴት) ያስገቡ።
 validation.invalidZipcode=እባክዎን የሚሰራ ባለ 5 አሃዝ ዚፕ ኮድ ያስገቡ።
-validation.noPoBox=እባክዎን የሚሰራ አድራሻ ያስገቡ።
+validation.noPoBox=እባክዎን የሚሰራ አድራሻ ያስገቡ። የፖስታ ሳጥን ቁጥሮችን አንቀበልም።
+
+#----------------------------------------------------------------------------------------------------------#
+# DROPDOWN QUESTION - text shown when answering a question where a user must select an option from a list. #
+#----------------------------------------------------------------------------------------------------------#
+
+# Placeholder text shown in a dropdown selector before the user has made a selection.
+placeholder.noDropdownSelection=አንድ አማራጭ ይምረጡ:
+
+
+#----------------------------------------------------------------------------------------------------------#
+# DATE QUESTION - text shown when answering a question where a user must select date. #
+#----------------------------------------------------------------------------------------------------------#
+validation.dateMisformatted=እባክዎን በዓዓዓዓ/ወወ/ቀን ቅርጽ ቀኑን (የልደት) አስገባ።
+
+#--------------------------------------------------------------------------------------------------------#
+# ENUMERATION QUESTION - text when viewing a question where a user must name entities, such as children. #
+#--------------------------------------------------------------------------------------------------------#
+
+# Text on a button an applicant would click to add another entity
+button.addEntity=አክል/ ጨምር {0}
+
+# Text on a button an applicant would click to delete an entity
+button.removeEntity=አስወግድ {0}
+
+# The confirmation dialog when an applicant deletes an enumerator entry.
+dialog.confirmDelete=እርግጠኛ ነዎት ይህንን ማስወገድ ይፈልጋሉ? {0}? ይህ ለውጥ "የሚቀጥለው" ("Next") የሚለውን ጠቅ ካደረጉ በኋላ ይቀመጣል እና ከዚህ ጋር የተያያዙ ሁሉም ውሂቦች ይጠፋሉ። {0}
+
+# Validation error that shows when an applicant does not enter a value.
 validation.entityNameRequired=እባክዎ ለእያንዳንዱ መስመር እሴት ያስገቡ።
+
+# Validation error that shows when an applicant uses a duplicate entity name
+validation.duplicateEntityName=እባክዎን ለእያንዳንዱ መስመር ልዩ የሆነ እሴት ያስገቡ።
+
+# The placeholder text for enumerator fields
+placeholder.entityName= ቅጽል ስም ለ {0}
+
+#---------------------------------------------------------------------------------#
+# FILEUPLOAD QUESTION - text when viewing a question where a user uploads a file. #
+#---------------------------------------------------------------------------------#
+
+# Validation error that shows when an applicant does not select a file to upload
 validation.fileRequired=እባክዎን ፋይል ይምረጡ።
-validation.idTooShort=ቢያንስ {0} ቁምፊዎች መያዝ አለበት።
+
+#---------------------------------------------------------------------#
+# ID QUESTION - id specific to filling out a question. #
+#---------------------------------------------------------------------#
+
+# Validation errors that appear if a user enters an answer that is too long or too short.
 validation.idTooLong=ቢበዛ {0} ቁምፊዎች መያዝ አለበት።
+
+validation.idTooShort=ቢያንስ {0} ቁምፊዎች መያዝ አለበት።
+.
 validation.numberRequired=ቁጥሮችን ብቻ መያዝ አለበት።
+
+#----------------------------------------------------------------------------------------------------------#
+# MULTI-SELECT QUESTION - text shown when filling out a question with multiple answers, such as a checkbox #
+#----------------------------------------------------------------------------------------------------------#
+
+# Validation errors that are shown if a user selects too many or too few answers.
+validation.tooFewSelections=እባክዎ ቢያንስ {0} ይምረጡ።
+
+validation.tooManySelections=እባክዎ ከ {0} ያነሱ ይምረጡ።
+
+
+#---------------------------------------------------#
+# NAME QUESTION - text when viewing a name question #
+#---------------------------------------------------#
+
+# Name question labels - these are shown as the field label before an input box.
+label.firstName=የመጀመሪያ ስም
+label.lastName=ያባት/ የመጨረሻ ስም
+label.middleName=የመሃል ስም
+
+# Placeholder text - this is shown inside the input box, before a user enters an answer.
+placeholder.firstName=የመጀመሪያ ስም
+placeholder.lastName=ያባት/ የመጨረሻ ስም
+placeholder.middleName=የመሃል ስም
+
+# Validation errors - these are shown if a user enters an invalid name.
+validation.firstNameRequired=እባክዎን የመጀመሪያ ስምዎን ያስገቡ።
+validation.lastNameRequired=እባክዎን ያባት/ የመጨረሻ ስምዎን ያስገቡ
+
+#------------------------------------------------------------------------#
+# NUMBER QUESTION - text specific to answering a question with a number. #
+#------------------------------------------------------------------------#
+
+# Validation errors that are shown when a user enters a number that is too big or too small, or a non-integer.
+validation.numberTooBig=ቢበዛ {0} መሆን አለበት።
+validation.numberTooSmall=ቢያንስ {0} መሆን አለበት።
+validation.numberNonInteger=ቁጥሩ አወንታዊ ሙሉ ቁጥር መሆን አለበት እና የቁጥር ቁምፊዎችን ከ0-9 ብቻ ሊይዝ ይችላል።
+
+#---------------------------------------------------------------------#
+# TEXT QUESTION - text specific to filling out a question with words. #
+#---------------------------------------------------------------------#
+
+# Validation errors that appear if a user enters an answer that is too long or too short.
+validation.textTooLong=ቢበዛ {0} ቁምፊዎች መያዝ አለበት።
+validation.textTooShort=ቢያንስ {0} ቁምፊዎች መያዝ አለበት።
+
+
+#---------------------------------------------------------------------#
+# MULTI OPTION QUESTION ADMIN EDIT - text specific when creating/editing a multi option question. #
+#---------------------------------------------------------------------#
+
+# Validation errors that appear if an admin leaves a multi option question blank.
 adminValidation.multiOptionEmpty=ብዙ አማራጭ ያላቸው ጥያቄዎች ባዶ አማራጮች ሊኖራቸው አይችልም።
+
