--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -343,7 +343,7 @@ pac4j.security.rules = [
 # If enabled, allows Prometheus server metrics to be retrieved via the "/metrics" URL path.
 # If "/metrics" disabled, returns a 404.
 server_metrics.enabled = false
-server_metrics.enabled = ${?SERVER_METRICS_ENABLED}
+server_metrics.enabled = ${?CIVIFORM_SERVER_METRICS_ENABLED}
 # Configuration for monitoring library https://github.com/Jyllands-Posten/play-prometheus-filters
 # The Prometheus Hotspot library provides some default collectors for garbage collection, memory pool, etc
 play-prometheus-filters.register-default-hotspot-collectors = true
