--- a/browser-test/browser-test-compose.dev.yml
+++ b/browser-test/browser-test-compose.dev.yml
@@ -13,7 +13,7 @@ services:
     tty: true # docker run -t
     ports:
       - 9457:9457
-    command: -jvm-debug "*:9457" ~run -Dconfig.file=conf/application.dev.conf
+    command: -jvm-debug "*:9457" ~run -Dconfig.file=conf/application.dev-browser-tests.conf
 
 volumes:
   node_modules-data:
