--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -341,7 +341,7 @@ pac4j.security.rules = [
 ]
 
 # If enabled, allows Prometheus server metrics to be retrieved via the "/metrics" URL path.
-# If "/metrics" disabled, returns a 404.
+# If "/metrics" is disabled, returns a 404.
 server_metrics.enabled = false
 server_metrics.enabled = ${?CIVIFORM_SERVER_METRICS_ENABLED}
 # Configuration for monitoring library https://github.com/Jyllands-Posten/play-prometheus-filters
