--- a/.github/workflows/aws-oidc-deploy-test.yaml
+++ b/.github/workflows/aws-oidc-deploy-test.yaml
@@ -31,20 +31,17 @@ jobs:
           #  Grab the config from the staging deploy repo to confirm
           #  the changes work with actual data
           curl https://raw.githubusercontent.com/civiform/civiform-staging-deploy/main/aws_staging_civiform_config.sh > civiform_config.sh
-
-      - name: Source config, set CIVIFORM_MODE to be "test", Run setup with latest tag
-        run: |
-          source civiform_config.sh
-          export CIVIFORM_MODE="test"
-          export APP_PREFIX="$(git rev-parse --short HEAD)"
-          echo "${LATEST_SNAPSHOT_TAG}"
-          cloud/shared/bin/setup  "--tag=${LATEST_SNAPSHOT_TAG}"
-          exit $?
+          echo '\nCIVIFORM_MODE="test"' >> civiform_config.sh
 
       - name: Source config, set CIVIFORM_MODE to be "test", Run deploy with latest tag
         run: |
-          source civiform_config.sh
-          export CIVIFORM_MODE="test"
-          echo "${LATEST_SNAPSHOT_TAG}"
-          cloud/shared/bin/deploy "--tag=${LATEST_SNAPSHOT_TAG}"
+          export IMAGE_TAG="${LATEST_SNAPSHOT_TAG}"
+          cloud/shared/bin/deploy
+          exit $?
+     
+      - name: Source config, set CIVIFORM_MODE to be "test", Run setup with latest tag
+        run: |
+          echo '\n APP_PREFIX="$(git rev-parse --short HEAD)"' >> civiform_config.sh
+          export IMAGE_TAG="${LATEST_SNAPSHOT_TAG}"
+          cloud/shared/bin/setup
           exit $?
