--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ tailwind.css
 *.terraform.lock.hcl
 *.tfvars
 cloud/**/backend_vars
-/cloud/deploys/dev_azure/civiform_config.sh
-/cloud/deploys/dev_aws/civiform_config.sh
+*civiform_config.sh
 *_override.tf
 !*example.auto.tfvars
 terraform.tfstate**
