--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,6 +21,10 @@ jobs:
         env:
           DOCKER_BUILDKIT: 1
         run: docker build -t civiform-dev --cache-from docker.io/civiform/civiform-dev:latest ./
+      - name: Build dev-oidc
+        env:
+          DOCKER_BUILDKIT: 1
+        run: bin/build-dev-oidc
       - name: Run tests
         run: bin/run-test-ci
       - name: Upload coverage to Codecov
