--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -7,3 +7,6 @@ include "application.dev.conf"
 # they should enable them via the Feature Flags HTTP
 # handler as needed.
 application_status_tracking_enabled = false
+
+# Enable caching of JS/CSS resources to speed up tests.
+enable_asset_caching_for_browser_tests = true
