--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,7 @@
     },
     "sourceMap": true,
     "mapRoot": "/assets",
-    "sourceRoot": "/assets"
+    "sourceRoot": "/assets",
+    "module": "ES2020"
   }
 }
