--- a/cloud/docker-compose.yaml
+++ b/cloud/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   cloud:
-    image: civiform/cloud
+    image: civiform/civiform-cloud-deployment
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
@@ -14,5 +14,6 @@ services:
       - IMAGE_TAG
       - COMMAND
     volumes:
+      # Mounting civiform config to the image in read only mode.
       - ${PWD}/${CONFIG}:/${CONFIG}:ro
     command: cloud/shared/bin/run.py --tag=${IMAGE_TAG} --command=${COMMAND} --config=${CONFIG}
