--- a/cloud/aws/metrics/adot-config.yaml
+++ b/cloud/aws/metrics/adot-config.yaml
@@ -5,9 +5,9 @@ receivers:
         scrape_interval: 15s
         scrape_timeout: 10s
       scrape_configs:
-      - job_name: "civiform_scraper"
-        static_configs:
-        - targets: [ 0.0.0.0:9000 ]
+        - job_name: 'civiform_scraper'
+          static_configs:
+            - targets: [0.0.0.0:9000]
   awsecscontainermetrics:
     collection_interval: 10s
 
@@ -28,7 +28,7 @@ processors:
 
 exporters:
   awsprometheusremotewrite:
-    endpoint: "${PROMETHEUS_WRITE_ENDPOINT}"
+    endpoint: '${PROMETHEUS_WRITE_ENDPOINT}'
     aws_auth:
       region: us-east-1
       service: aps
