--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -131,7 +131,7 @@ jobs:
         uses: luizm/action-sh-checker@master
         env:
           SHELLCHECK_OPTS: -s bash -S error
-          sh_checker_exclude: '*.md cloud/shared/bin/doctor_impl'
+          sh_checker_exclude: '*.md'
           SHFMT_OPTS:
             -bn -ci -i 2
             # -i 2   indent 2 spaces
