add logout url param

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -77,6 +77,7 @@ auth {
   # Logout options when using OIDC (idcs, or applicant_generic_oidc)
   oidc_provider_logout = false
   oidc_provider_logout = ${?APPLICANT_OIDC_PROVIDER_LOGOUT}
+  applicant_oidc_logout_url = ${APPLICANT_OIDC_LOGOUT_URL}
   oidc_post_logout_param = ${?APPLICANT_OIDC_POST_LOGOUT_REDIRECT_PARAM}
   oidc_logout_client_id_param = ${?APPLICANT_OIDC_LOGOUT_CLIENT_PARAM}
 }
