--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -598,11 +598,11 @@ api_keys_ban_global_subnet = ${?CIVIFORM_API_KEYS_BAN_GLOBAL_SUBNET}
 api_applications_list_max_page_size = 1000
 api_applications_list_max_page_size = ${?CIVIFORM_API_APPLICATIONS_LIST_MAX_PAGE_SIZE}
 
-# When set to true Global Admins can also be Program Admins.
-# It will enable Global Admin assign themselves as Program Admins, and get access to 
+# When set to true Civiform Admins can also be Program Admins.
+# It will enable Civiform Admin assign themselves as Program Admins, and get access to 
 # all Applications for that program.
-allow_global_admin_acccess_programs = false
-allow_global_admin_acccess_programs = ${?ALLOW_GLOBAL_ADMIN_ACCCESS_PROGRAMS}
+allow_civiform_admin_acccess_programs = false
+allow_civiform_admin_acccess_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCCESS_PROGRAMS}
 ## Feature flag toggles.
 # Launched features.
 
