allow civiform admins see applications. flag guarded

--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -24,5 +24,6 @@ play.filters {
 
 # Feature flags.
 application_status_tracking_enabled = true
+allow_civiform_admin_access_programs = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
