--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -67,11 +67,20 @@ whitelabel {
 play.http.secret.key = "changeme"
 play.http.secret.key = ${?SECRET_KEY}
 
-# Configure which IDP to use for applicant and admin authentication.
-auth.applicant_idp = "idcs"
-auth.applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
-auth.admin_idp = "adfs"
-auth.admin_idp = ${?CIVIFORM_ADMIN_IDP}
+auth {
+  # Configure which IDP to use for applicant and admin authentication.
+  applicant_idp = "idcs"
+  applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
+  admin_idp = "adfs"
+  admin_idp = ${?CIVIFORM_ADMIN_IDP}
+
+  # Logout options when using OIDC (idcs, or applicant_generic_oidc)
+  oidc_provider_logout = false
+  oidc_provider_logout = ${?APPLICANT_OIDC_PROVIDER_LOGOUT}
+  oidc_override_logout_url = ${?APPLICANT_OIDC_OVERRIDE_LOGOUT_URL}
+  oidc_post_logout_param = ${?APPLICANT_OIDC_POST_LOGOUT_REDIRECT_PARAM}
+  oidc_logout_client_id_param = ${?APPLICANT_OIDC_LOGOUT_CLIENT_PARAM}
+}
 
 ## IDCS integration
 # IDCS secrets must be provided by environment variables - we cannot check them in.
