Allow civiform admins see applications. flag guarded (#3475)
* allow civiform admins see applications. flag guarded

* comment

* revert dev config change

* checknotnull

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -610,6 +610,10 @@ api_applications_list_max_page_size = ${?CIVIFORM_API_APPLICATIONS_LIST_MAX_PAGE
 ## Feature flag toggles.
 # Launched features.
 
+# When set to true Civiform Admins will see all Applications for all Programs.
+allow_civiform_admin_access_programs = false
+allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
+
 # Preview features.
 
 # In development features.
