--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -25,6 +25,8 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: '11.0.10'
+          distribution: 'zulu'
+
       - id: file_changes
         uses: trilom/file-changes-action@v1.2.4
         with:
