Login.gov implementation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,10 @@ services:
       - APPLICANT_OIDC_FIRST_NAME_ATTRIBUTE
       - APPLICANT_OIDC_MIDDLE_NAME_ATTRIBUTE
       - APPLICANT_OIDC_LAST_NAME_ATTRIBUTE
+      - LOGIN_GOV_CLIENT_ID
+      - LOGIN_GOV_DISCOVERY_URI
+      - LOGIN_GOV_ADDITIONAL_SCOPES
+      - LOGIN_GOV_ACR_VALUE
       - CF_OPTIONAL_QUESTIONS
       - WHITELABEL_SMALL_LOGO_URL
       - WHITELABEL_LOGO_WITH_NAME_URL
