--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -130,6 +130,7 @@ applicant_generic_oidc.last_name_attribute = ${?APPLICANT_OIDC_LAST_NAME_ATTRIBU
 
 
 ## Login.gov OIDC integration
+# https://developers.login.gov/oidc/
 login_gov.provider_name = "LoginGov"
 login_gov.client_id = "urn:gov:gsa:openidconnect.profiles:sp:sso:ar:civiform_dev"
 login_gov.client_id = ${?LOGIN_GOV_CLIENT_ID}
@@ -139,7 +140,9 @@ login_gov.discovery_uri = ${?LOGIN_GOV_DISCOVERY_URI}
 # Additional Scopes should be space separated values.
 login_gov.additional_scopes = ${?LOGIN_GOV_ADDITIONAL_SCOPES}
 
-# Valid values are: "http://idmanagement.gov/ns/assurance/ial/1" or "http://idmanagement.gov/ns/assurance/ial/2"
+# Valid values are:
+# - "http://idmanagement.gov/ns/assurance/ial/1" (Open registration, email only)
+# - or "http://idmanagement.gov/ns/assurance/ial/2" (Requires identity verification)
 login_gov.acr_value="http://idmanagement.gov/ns/assurance/ial/1"
 login_gov.acr_value=${?LOGIN_GOV_ACR_VALUE}
 
