--- a/test-support/unit-test-docker-compose.yml
+++ b/test-support/unit-test-docker-compose.yml
@@ -29,8 +29,8 @@ services:
       - 9100:9000
       - 8459:8459
     environment:
-      - IDCS_CLIENT_ID=foo
-      - IDCS_SECRET=bar
+      - IDCS_CLIENT_ID=idcs-fake-oidc-client
+      - IDCS_SECRET=idcs-fake-oidc-secret
       - IDCS_DISCOVERY_URI=http://oidc:3380/.well-known/openid-configuration
       - DB_JDBC_STRING=jdbc:postgresql://database:5432/postgres
       - BASE_URL=http://localhost:9000
