use dev-oidc in oidc-compliant mode by default, allow logouts (#3648)
- Change the CIVIFORM_APPLICANT_IDP in bin/run-dev to the generic-oidc implementation.  
- Sets up an additional dev-oidc client that follows the standard OIDC-compliant flow (vs the IDCS version).
- Allows the testing of logout and logging back in to the dev server
- Renames the fake client-id and client-secret 
- Delete the unused admin_idp conf variable

--- a/browser-test/browser-test-compose.yml
+++ b/browser-test/browser-test-compose.yml
@@ -25,8 +25,10 @@ services:
     ports:
       - 9999:9000
     environment:
-      - IDCS_CLIENT_ID=foo
-      - IDCS_SECRET=bar
+      - CIVIFORM_APPLICANT_IDP=idcs
+      - APPLICANT_OIDC_PROVIDER_LOGOUT=true
+      - IDCS_CLIENT_ID=idcs-fake-oidc-client
+      - IDCS_SECRET=idcs-fake-oidc-secret
       - IDCS_DISCOVERY_URI=http://fake-idcs:3380/.well-known/openid-configuration
       - DB_JDBC_STRING=jdbc:postgresql://database:5432/postgres
       - BASE_URL=http://civiform:9000
